# rust_examples

./: Cargo.toml
src/: lib.rs
src/generics/: advanced_concept.rs  borrow_checker.rs  complex.rs  concurrency.rs  error_handle.rs  functions.rs  games.rs  life_time.rs  macro_rule.rs  media_player.rs  mod.rs  smart_pointers.rs  trait_bounds.rs  unsafe_blocks.rs  vehicle.rs
src/tests/: mod.rs  test_generics.rs
