[package]
name = "logic_gates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
actix = "0.7.9"
futures = "0.1.25"
tokio = "0.1.15"
rand = "0.8.5"
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.6.1"